Fix button in menu and label on fragment

--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -74,7 +74,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:background="@drawable/button"
+        android:background="@drawable/btn_back"
         android:fontFamily="sans-serif"
         android:text="@string/showHistoryButtonText"
         android:textColor="@color/white"
@@ -92,7 +92,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:background="@drawable/button"
+        android:background="@drawable/btn_back"
         android:fontFamily="sans-serif"
         android:text="@string/setLimitsButtonText"
         android:textColor="@color/white"
@@ -110,7 +110,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:background="@drawable/button"
+        android:background="@drawable/btn_back"
         android:fontFamily="sans-serif"
         android:text="@string/logOutButtonText"
         android:textColor="@color/white"
