--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -120,5 +120,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/setLimitsButton"/>
 
+    <TextView
+        android:id="@+id/temperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="300dp"
+        android:layout_marginEnd="10dp"
+        android:textColor="@color/redColor"
+        android:text="Not found"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
